tests/baselines/reference/overloadOnConstantsInvalidOverload1.errors.txt
tests/cases/compiler/overloadOnConstantsInvalidOverload1.ts(6,10): error TS2394: Overload signature is not compatible with function implementation.
tests/cases/compiler/overloadOnConstantsInvalidOverload1.ts(11,5): error TS2345: Argument of type '"HI"' is not assignable to parameter of type '"SPAN"'.


==== tests/cases/compiler/overloadOnConstantsInvalidOverload1.ts (2 errors) ====
    class Base { foo() { } }
    class Derived1 extends Base { bar() { } }
    class Derived2 extends Base { baz() { } }
    class Derived3 extends Base { biz() { } }
    
    function foo(name: "SPAN"): Derived1;
             ~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function foo(name: "DIV"): Derived2 {
        return null;
    }
    
    foo("HI");
        ~~~~
!!! error TS2345: Argument of type '"HI"' is not assignable to parameter of type '"SPAN"'.